# 381903-3_Stetsenko_lab_15

./: .travis.yml  CMakeLists.txt  README.md
LabTest/: CMakeLists.txt  test_main.cpp  tests.cpp
Node/: CMakeLists.txt  Node.h
Tree/: CMakeLists.txt  Tree.h
TreeNode/: CMakeLists.txt  TreeNode.h
